== Changelog

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.0.0/[Keep a Changelog],
and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== fixes

=== added

=== changed

== 3.1.1 - 2023-11-07

=== fixes

* https://github.com/docToolchain/docToolchain/issues/1281[#1281: publishToConfluence throws exception when uploading attachments in v3.1.0]
* https://github.com/docToolchain/docToolchain/issues/1283[#1283: "tasks" target causes Exception]

=== added

=== changed

== 3.1.0 - 2023-11-03

=== fixes

* https://github.com/docToolchain/docToolchain/pull/1262[#1262: downloadTemplate skips creating a folder, causes generateSite to fail]
* https://github.com/docToolchain/docToolchain/issues/1269[#1269 Fix wrong bash usage on Darwin with Homebrew]
* https://github.com/docToolchain/docToolchain/issues/1270[#1269 Ensure DTC_JAVA_HOME is preferred over JAVA_HOME]
* https://github.com/docToolchain/docToolchain/issues/1069[#1069 publishToConfluence 'ancestorName' query does not support proxy]
* https://github.com/docToolchain/docToolchain/issues/1272[#1272: publishToConfluence broken when document contains internal links]

=== added

* https://github.com/docToolchain/docToolchain/issues/1254[configure Confluence API parameters via Gradle parameters]
* introduce `verifyConfluenceApiAccess` task - check if your API settings are correct

=== changed

* introduce docToolchain core component to modularize the project
* implement Confluence API v2 support

== 3.0.2 - 2023-09-12

=== fixes

* https://github.com/docToolchain/docToolchain/pull/1246[#1246: publishToConfluence: Fix comparision error for titles with leading/trailing white spaces]
* https://github.com/docToolchain/docToolchain/issues/1248[#1248: broken default config]

== 3.0.1 - 2023-09-11

=== fixes
